# mouse2

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
mouse2/: __init__.py  __main__.py  _darwinmouse.py  _generic.py  _mouse_tests.py  _nixcommon.py  _nixmouse.py  _winmouse.py
